[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/ui/InputConfig.gd" type="Script" id=1]
[ext_resource path="res://assets/font/default_font.tres" type="DynamicFont" id=2]

[node name="InputConfig" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ActionsDropdown" type="OptionButton" parent="."]
margin_left = 96.0
margin_top = 32.0
margin_right = 616.0
margin_bottom = 176.0
custom_fonts/font = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionInputDisplay" type="Label" parent="."]
margin_left = 752.0
margin_top = 40.0
margin_right = 1208.0
margin_bottom = 168.0
custom_fonts/font = ExtResource( 2 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="NewInput" type="Button" parent="Buttons"]
margin_left = 640.0
margin_top = 48.0
margin_right = 720.0
margin_bottom = 96.0
custom_fonts/font = ExtResource( 2 )
text = "New"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetInput" type="Button" parent="Buttons"]
margin_left = 640.0
margin_top = 112.0
margin_right = 720.0
margin_bottom = 160.0
custom_fonts/font = ExtResource( 2 )
text = "Reset"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[connection signal="pressed" from="Buttons/NewInput" to="." method="_on_NewInput_pressed"]
[connection signal="pressed" from="Buttons/ResetInput" to="." method="_on_ResetInput_pressed"]
